# dart-gobject-bindings

./: configure.ac
dart_src/: atk.dart  cairo.dart  gdart.dart  gdk.dart  gdkpixbuf.dart  gio.dart  girepository.dart  glib.dart  gmodule.dart  gnu_get_libc_version.dart  gobject.dart  gtk.dart  hello_world.dart  introspection_compat_classes.dart  main.dart  pango.dart  rsvg.dart  test.dart  wall_clock.dart  xlib.dart
gir-binding-gen/: pubspec.yaml
gir-binding-gen/example/: gir_binding_gen_example.dart
gir-binding-gen/lib/: gir_binding_gen.dart
gir-binding-gen/lib/src/: print_visitor.dart  visitor.dart
gir-binding-gen/test/: gir_binding_gen_test.dart
gir-bootstrapper/: pubspec.yaml
gir-bootstrapper/example/: gir_bootstrapper_example.dart
gir-bootstrapper/lib/: gir_bootstrapper.dart
gir-bootstrapper/lib/src/: gir_bootstrapper_base.dart
gir-bootstrapper/lib/src/discovery/: discovery.dart
gir-bootstrapper/lib/src/glib/: ffi.dart
gir-bootstrapper/lib/src/gobject/: ffi.dart
gir-bootstrapper/lib/src/gobject_introspection/: ffi.dart
gir-bootstrapper/test/: gir_bootstrapper_test.dart
src/: Makefile.am  gdart.c
src/gdart/: array.c  array.h  bridge_context.c  bridge_context.h  bridge_context_forward.h  common.c  common.h  function.c  function.h  g_property.c  g_property.h  importer.c  importer.h  introspection_interface.c  introspection_interface.h  marshallers_check.c  marshallers_check.h  object_wrapper.c  object_wrapper.h
