dnl Process this file with autoconf to produce a configure script.
dnl Created by Anjuta application wizard.

AC_INIT(gdart, 0.1)
AC_CONFIG_HEADERS([config.h])
AM_INIT_AUTOMAKE([1.11])

AM_SILENT_RULES([yes])

LT_INIT

PKG_CHECK_MODULES(GDART, [gee-0.8, glib-2.0, gobject-2.0, gobject-introspection-1.0])


AC_OUTPUT([
Makefile
src/Makefile
src/gdart/Makefile
])
